[tool.poetry]
name = "tdd_blog"
version = "0.1.0"
description = "A TDD workshop using a blog"
authors = ["theneubeck"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
tdd-blog = "tdd_blog.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
